// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Drag and Drop Upload File Area  3 Files Added 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="uploadAreaDnD "
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="row fileArea"
    >
      <div
        className="col-3 fileCont"
        id="test1.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test1.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test2.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test2.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test3.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test3.fa
          </p>
        </div>
      </div>
    </div>
    <div
      className="selectArea"
    >
      <label
        className="btn btn-primary"
        htmlFor="fileUpload"
        id="fileUploadLabel"
      >
        Select Files
        <input
          id="fileUpload"
          multiple={true}
          name="fileUpload"
          type="file"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Drag and Drop Upload File Area  Active Dragging 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="uploadAreaDnD dragging"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="row fileArea"
    >
      <div
        className="centered noFiles"
      >
        <br />
        <br />
        <br />
        <br />
        <span
          className="oi oi-cloud-upload"
        />
        <h3>
          Drag and drop files here
          <br />
          Or
        </h3>
      </div>
    </div>
    <div
      className="selectArea"
    >
      <label
        className="btn btn-primary"
        htmlFor="fileUpload"
        id="fileUploadLabel"
      >
        Select Files
        <input
          id="fileUpload"
          multiple={true}
          name="fileUpload"
          type="file"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Drag and Drop Upload File Area  No Files Added 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="uploadAreaDnD "
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="row fileArea"
    >
      <div
        className="centered noFiles"
      >
        <br />
        <br />
        <br />
        <br />
        <span
          className="oi oi-cloud-upload"
        />
        <h3>
          Drag and drop files here
          <br />
          Or
        </h3>
      </div>
    </div>
    <div
      className="selectArea"
    >
      <label
        className="btn btn-primary"
        htmlFor="fileUpload"
        id="fileUploadLabel"
      >
        Select Files
        <input
          id="fileUpload"
          multiple={true}
          name="fileUpload"
          type="file"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Drag and Drop Upload File Area  Overflow Files 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="uploadAreaDnD "
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="row fileArea"
    >
      <div
        className="col-3 fileCont"
        id="test1.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test1.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test2.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test2.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test3.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test3.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test4.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test4.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test5.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test5.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test6.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test6.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test7.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test7.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test8.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test8.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test9.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test9.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test10.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test10.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test11.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test11.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test12.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test12.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test13.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test13.fa
          </p>
        </div>
      </div>
      <div
        className="col-3 fileCont"
        id="test14.fa"
      >
        <div
          className="file"
        >
          <button
            className="btn xBtn btn-light"
            onClick={[Function]}
            type="button"
          >
            x
          </button>
          <p>
            test14.fa
          </p>
        </div>
      </div>
    </div>
    <div
      className="selectArea"
    >
      <label
        className="btn btn-primary"
        htmlFor="fileUpload"
        id="fileUploadLabel"
      >
        Select Files
        <input
          id="fileUpload"
          multiple={true}
          name="fileUpload"
          type="file"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer Logged in 1`] = `
<footer
  className="footer"
>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          Data Hub designed and maintained by the MoTrPAC BioInformatics Center at
          <a
            href="https://www.stanford.edu/"
            target="_new"
          >
             Stanford University
          </a>
        </p>
        <p>
          Funded by the
          <a
            href="https://commonfund.nih.gov/"
            target="_new"
          >
             NIH Common Fund
          </a>
        </p>
      </div>
      <div
        className="col copyright"
      >
        <p>
          © XXXX 2018
        </p>
      </div>
      <div
        className="col rightAlign"
      >
        <button
          className="logInOutBtn btn"
          type="button"
        >
          Test User Logout
        </button>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Footer default 1`] = `
<footer
  className="footer"
>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        <p>
          Data Hub designed and maintained by the MoTrPAC BioInformatics Center at
          <a
            href="https://www.stanford.edu/"
            target="_new"
          >
             Stanford University
          </a>
        </p>
        <p>
          Funded by the
          <a
            href="https://commonfund.nih.gov/"
            target="_new"
          >
             NIH Common Fund
          </a>
        </p>
      </div>
      <div
        className="col copyright"
      >
        <p>
          © XXXX 2018
        </p>
      </div>
      <div
        className="col rightAlign"
      >
        <button
          className="logInOutBtn btn"
          type="button"
        >
          Submitter Login
        </button>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Landing Page default 1`] = `
<div
  className="App"
>
  <header>
    <nav
      className="navbar navbar-expand-lg navbar-dark"
    >
      <div
        className="container"
      >
        <a
          className="navbar-brand siteTitle"
          href="#"
        >
          MoTrPAC 
          <span
            className="light"
          >
            Data Hub
          </span>
        </a>
        <button
          aria-controls="navbarSupportedContent"
          aria-expanded="false"
          aria-label="Toggle navigation"
          className="navbar-toggler"
          data-target="#navbarSupportedContent"
          data-toggle="collapse"
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          className="collapse navbar-collapse flex-row-reverse"
          id="navbarSupportedContent"
        >
          <ul
            className="navbar-nav"
          >
            
            <li
              className="nav-item navItem"
            >
              <a
                className="nav-link"
                href=""
              >
                Data
              </a>
            </li>
            <li
              className="nav-item navItem dropdown"
            >
              <a
                className="nav-link dropdown-toggle"
                data-toggle="dropdown"
                href=""
                id="navbarDropdownMenuLink"
                role="button"
              >
                About
              </a>
              <div
                aria-labelledby="navbarDropdownMenuLink"
                className="dropdown-menu"
              >
                <a
                  className="dropdown-item"
                  href=""
                >
                  Useful Links
                </a>
                <a
                  className="dropdown-item"
                  href=""
                >
                  Who we are
                </a>
              </div>
            </li>
            <li
              className="nav-item navItem"
            >
              <a
                className="nav-link"
                href=""
              >
                Contact
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </header>
  <div
    className="componentHolder"
  >
    <div
      className="container"
    >
      <div
        className="row welcome"
      >
        <div
          className="col-8"
        >
          <h3
            className="light"
          >
            Welcome to the MoTrPAC Data Hub
          </h3>
        </div>
      </div>
      <div
        className="row Landinginfo"
      >
        <div
          className="col whatis"
        >
          <h5
            className="heavy"
          >
            What is MoTrPAC?
          </h5>
          <p>
            MoTrPAC is a national research consortium designed to discover and perform preliminary characterization of the range of molecular transducers (the “molecular map”) that underlie the effects of physical activity in humans. The program’s goal is to study the molecular changes that occur during and after exercise and ultimately to advance the understanding of how physical activity improves and preserves health.
          </p>
          <br />
          <p>
            The MoTrPAC program is supported by the NIH Common Fund and is managed by a trans-agency working group representing multiple NIH institutes and centers, led by the NIH Office of Strategic Coordination, National Institute of Arthritis and Musculoskeletal and Skin Diseases, National Institute of Diabetes and Digestive and Kidney Diseases, National Institute on Aging, and National Institute of Biomedical Imaging and Bioengineering.
          </p>
          <br />
          <p>
            For more information on all the sites associated with MoTrPAC and protocols for data collection please visit
            <a
              href="https://www.motrpac.org/"
              target="_new"
            >
               MoTrPAC.org.
            </a>
          </p>
          <br />
        </div>
        <div
          className="col"
        >
          <div
            className="accessDataInfo"
          >
            <h5
              className="heavy"
            >
              Accessing Data: 
            </h5>
            <p>
              Data generated to date is not yet publicly accessible. For updates when publicly accessible data are available contact us at
              <a
                href="mailto:MoTrPAC-data-requests@xxx.xxx"
                target="_new"
              >
                 MoTrPAC-data-requests@xxx.xxx
              </a>
            </p>
            <h5
              className="heavy"
            >
              Uploading Data From Study Sites:
            </h5>
            <p>
              If you are a member of one of the sites involved with MoTrPAC please log in using your provided ID at the link on the bottom right of this website.  If you have issues logging in please contact the bioinformatic center at
              <a
                href="mailto:MoTrPAC-helpdesk@xxx.xxx"
                target="_new"
              >
                 MoTrPAC-helpdesk@xxx.xxx
              </a>
            </p>
          </div>
          <br />
          <div
            className="logoCont"
          >
            <img
              alt="MoTrPAC Logo"
              className="img-fluid"
              src="MoTrPAC_horizontal.png"
            />
          </div>
          <br />
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <p>
            Data Hub designed and maintained by the MoTrPAC BioInformatics Center at
            <a
              href="https://www.stanford.edu/"
              target="_new"
            >
               Stanford University
            </a>
          </p>
          <p>
            Funded by the
            <a
              href="https://commonfund.nih.gov/"
              target="_new"
            >
               NIH Common Fund
            </a>
          </p>
        </div>
        <div
          className="col copyright"
        >
          <p>
            © XXXX 2018
          </p>
        </div>
        <div
          className="col rightAlign"
        >
          <button
            className="logInOutBtn btn"
            type="button"
          >
            Submitter Login
          </button>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Navbar Logged in 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand siteTitle"
      href="#"
    >
      MoTrPAC 
      <span
        className="light"
      >
        Data Hub
      </span>
    </a>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbarSupportedContent"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse flex-row-reverse"
      id="navbarSupportedContent"
    >
      <ul
        className="navbar-nav"
      >
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Dashboard
          </a>
        </li>
        <li
          className="nav-item navItem dropdown"
        >
          <a
            className="nav-link dropdown-toggle"
            data-toggle="dropdown"
            href=""
            id="navbarDropdownMenuLinkAnalysis"
            role="button"
          >
            Analysis
          </a>
          <div
            aria-labelledby="navbarDropdownMenuLinkAnalysis"
            className="dropdown-menu"
          >
            <a
              className="dropdown-item"
              href=""
            >
              Animal
            </a>
            <a
              className="dropdown-item"
              href=""
            >
              Human
            </a>
          </div>
        </li>
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Methods
          </a>
        </li>
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Data
          </a>
        </li>
        <li
          className="nav-item navItem dropdown"
        >
          <a
            className="nav-link dropdown-toggle"
            data-toggle="dropdown"
            href=""
            id="navbarDropdownMenuLink"
            role="button"
          >
            About
          </a>
          <div
            aria-labelledby="navbarDropdownMenuLink"
            className="dropdown-menu"
          >
            <a
              className="dropdown-item"
              href=""
            >
              Useful Links
            </a>
            <a
              className="dropdown-item"
              href=""
            >
              Who we are
            </a>
          </div>
        </li>
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Contact
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Navbar default 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand siteTitle"
      href="#"
    >
      MoTrPAC 
      <span
        className="light"
      >
        Data Hub
      </span>
    </a>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbarSupportedContent"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse flex-row-reverse"
      id="navbarSupportedContent"
    >
      <ul
        className="navbar-nav"
      >
        
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Data
          </a>
        </li>
        <li
          className="nav-item navItem dropdown"
        >
          <a
            className="nav-link dropdown-toggle"
            data-toggle="dropdown"
            href=""
            id="navbarDropdownMenuLink"
            role="button"
          >
            About
          </a>
          <div
            aria-labelledby="navbarDropdownMenuLink"
            className="dropdown-menu"
          >
            <a
              className="dropdown-item"
              href=""
            >
              Useful Links
            </a>
            <a
              className="dropdown-item"
              href=""
            >
              Who we are
            </a>
          </div>
        </li>
        <li
          className="nav-item navItem"
        >
          <a
            className="nav-link"
            href=""
          >
            Contact
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Upload Form Empty Form 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <form
    className="needs-validation"
    disabled={false}
    id="uploadForm"
    name="uploadForm"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="data-type"
      >
        Data Type *
        <select
          className="form-control"
          disabled={false}
          id="dataType"
          required={true}
          type="text"
          value=""
        >
          <option
            value="WGS"
          >
            WGS
          </option>
          <option
            value="RNA-seq"
          >
            RNA-seq
          </option>
          <option
            value="Methylome (Gastroc, White Fat, Liver, Heart)"
          >
            Methylome (Gastroc, White Fat, Liver, Heart)
          </option>
          <option
            value="ATAC-Seq"
          >
            ATAC-Seq
          </option>
          <option
            value="Untargeted RP"
          >
            Untargeted RP
          </option>
          <option
            value="Untargeted HILIC-positive"
          >
            Untargeted HILIC-positive
          </option>
          <option
            value="Untargeted HILIC -negative"
          >
            Untargeted HILIC -negative
          </option>
          <option
            value="Untargeted Lipidomics"
          >
            Untargeted Lipidomics
          </option>
          <option
            value="Targeted Acyl-CoA"
          >
            Targeted Acyl-CoA
          </option>
          <option
            value="Targeted Acylcarnitines"
          >
            Targeted Acylcarnitines
          </option>
          <option
            value="Targeted Ketoacids"
          >
            Targeted Ketoacids
          </option>
          <option
            value="Targeted Organic Acids"
          >
            Targeted Organic Acids
          </option>
          <option
            value="Targeted Eicosanoids"
          >
            Targeted Eicosanoids
          </option>
          <option
            value="Targeted Nucleotides"
          >
            Targeted Nucleotides
          </option>
          <option
            value="Targeted oxylipins"
          >
            Targeted oxylipins
          </option>
          <option
            value="Targeted Amines"
          >
            Targeted Amines
          </option>
          <option
            value="Targeted Steroids"
          >
            Targeted Steroids
          </option>
          <option
            value="TCA Cycle"
          >
            TCA Cycle
          </option>
          <option
            value="Targeted Ceramides"
          >
            Targeted Ceramides
          </option>
          <option
            value="Global Proteomics"
          >
            Global Proteomics
          </option>
          <option
            value="Global Phospho-proteomics"
          >
            Global Phospho-proteomics
          </option>
          <option
            value="Redox proteome"
          >
            Redox proteome
          </option>
          <option
            value="Acyl/Acetyl proteome"
          >
            Acyl/Acetyl proteome
          </option>
          <option
            value="SomaLogic"
          >
            SomaLogic
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="identifier"
      >
        Identifier(s) * – comma seperate if multiple
        <input
          className="form-control"
          disabled={false}
          id="identifier"
          placeholder="Ex: AS213141"
          required={true}
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="collection-date"
      >
        Collection Date *
        <input
          className="form-control"
          disabled={false}
          id="collectionDate"
          placeholder="MM/DD/YYYY"
          required={true}
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="subject-type"
      >
        Subject Type *
        <select
          className="form-control"
          disabled={false}
          id="subjectType"
          value=""
        >
          <option
            value="Human"
          >
            Human
          </option>
          <option
            value="Animal"
          >
            Animal
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="study-phase"
      >
        Study Phase *
        <select
          className="form-control"
          disabled={false}
          id="studyPhase"
          value=""
        >
          <option
            value="Vanguard"
          >
            Vanguard
          </option>
          <option
            value="1"
          >
            1
          </option>
          <option
            value="1A"
          >
            1A
          </option>
          <option
            value="1B"
          >
            1B
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="N/A"
          >
            N/A
          </option>
          <option
            value="other"
          >
            Other
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={true}
        className="form-check-input"
        disabled={false}
        id="rawData"
        name="Raw"
        type="checkbox"
        value="Raw Data"
      />
      <label
        className="form-check-label"
        htmlFor="rawData"
      >
        Raw Data
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={false}
        className="form-check-input"
        disabled={false}
        id="processedData"
        name="Pre-Processed"
        type="checkbox"
        value="Processed Data"
      />
      <label
        className="form-check-label"
        htmlFor="processedData"
      >
        Pre-Processed Data
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="description"
      >
        <br />
        Description
        <textarea
          className="form-control"
          disabled={false}
          id="description"
          placeholder="Description"
          type="textarea"
          value=""
        />
      </label>
    </div>
    <input
      id="submit-form"
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Upload Form Submitted 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <form
    className="was-validated"
    disabled={true}
    id="uploadForm"
    name="uploadForm"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="data-type"
      >
        Data Type *
        <select
          className="form-control"
          disabled={true}
          id="dataType"
          required={true}
          type="text"
          value="ATAC-Seq"
        >
          <option
            value="WGS"
          >
            WGS
          </option>
          <option
            value="RNA-seq"
          >
            RNA-seq
          </option>
          <option
            value="Methylome (Gastroc, White Fat, Liver, Heart)"
          >
            Methylome (Gastroc, White Fat, Liver, Heart)
          </option>
          <option
            value="ATAC-Seq"
          >
            ATAC-Seq
          </option>
          <option
            value="Untargeted RP"
          >
            Untargeted RP
          </option>
          <option
            value="Untargeted HILIC-positive"
          >
            Untargeted HILIC-positive
          </option>
          <option
            value="Untargeted HILIC -negative"
          >
            Untargeted HILIC -negative
          </option>
          <option
            value="Untargeted Lipidomics"
          >
            Untargeted Lipidomics
          </option>
          <option
            value="Targeted Acyl-CoA"
          >
            Targeted Acyl-CoA
          </option>
          <option
            value="Targeted Acylcarnitines"
          >
            Targeted Acylcarnitines
          </option>
          <option
            value="Targeted Ketoacids"
          >
            Targeted Ketoacids
          </option>
          <option
            value="Targeted Organic Acids"
          >
            Targeted Organic Acids
          </option>
          <option
            value="Targeted Eicosanoids"
          >
            Targeted Eicosanoids
          </option>
          <option
            value="Targeted Nucleotides"
          >
            Targeted Nucleotides
          </option>
          <option
            value="Targeted oxylipins"
          >
            Targeted oxylipins
          </option>
          <option
            value="Targeted Amines"
          >
            Targeted Amines
          </option>
          <option
            value="Targeted Steroids"
          >
            Targeted Steroids
          </option>
          <option
            value="TCA Cycle"
          >
            TCA Cycle
          </option>
          <option
            value="Targeted Ceramides"
          >
            Targeted Ceramides
          </option>
          <option
            value="Global Proteomics"
          >
            Global Proteomics
          </option>
          <option
            value="Global Phospho-proteomics"
          >
            Global Phospho-proteomics
          </option>
          <option
            value="Redox proteome"
          >
            Redox proteome
          </option>
          <option
            value="Acyl/Acetyl proteome"
          >
            Acyl/Acetyl proteome
          </option>
          <option
            value="SomaLogic"
          >
            SomaLogic
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="identifier"
      >
        Identifier(s) * – comma seperate if multiple
        <input
          className="form-control"
          disabled={true}
          id="identifier"
          placeholder="Ex: AS213141"
          required={true}
          type="text"
          value="100010208"
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="collection-date"
      >
        Collection Date *
        <input
          className="form-control"
          disabled={true}
          id="collectionDate"
          placeholder="MM/DD/YYYY"
          required={true}
          type="text"
          value="10/21/18"
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="subject-type"
      >
        Subject Type *
        <select
          className="form-control"
          disabled={true}
          id="subjectType"
          value="Human"
        >
          <option
            value="Human"
          >
            Human
          </option>
          <option
            value="Animal"
          >
            Animal
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="study-phase"
      >
        Study Phase *
        <select
          className="form-control"
          disabled={true}
          id="studyPhase"
          value="Vanguard"
        >
          <option
            value="Vanguard"
          >
            Vanguard
          </option>
          <option
            value="1"
          >
            1
          </option>
          <option
            value="1A"
          >
            1A
          </option>
          <option
            value="1B"
          >
            1B
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="N/A"
          >
            N/A
          </option>
          <option
            value="other"
          >
            Other
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={true}
        className="form-check-input"
        disabled={true}
        id="rawData"
        name="Raw"
        type="checkbox"
        value="Raw Data"
      />
      <label
        className="form-check-label"
        htmlFor="rawData"
      >
        Raw Data
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={false}
        className="form-check-input"
        disabled={true}
        id="processedData"
        name="Pre-Processed"
        type="checkbox"
        value="Processed Data"
      />
      <label
        className="form-check-label"
        htmlFor="processedData"
      >
        Pre-Processed Data
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="description"
      >
        <br />
        Description
        <textarea
          className="form-control"
          disabled={true}
          id="description"
          placeholder="Description"
          type="textarea"
        />
      </label>
    </div>
    <input
      id="submit-form"
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Upload Form Unfilled Error 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <form
    className="was-validated"
    disabled={false}
    id="uploadForm"
    name="uploadForm"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="data-type"
      >
        Data Type *
        <select
          className="form-control"
          disabled={false}
          id="dataType"
          required={true}
          type="text"
          value=""
        >
          <option
            value="WGS"
          >
            WGS
          </option>
          <option
            value="RNA-seq"
          >
            RNA-seq
          </option>
          <option
            value="Methylome (Gastroc, White Fat, Liver, Heart)"
          >
            Methylome (Gastroc, White Fat, Liver, Heart)
          </option>
          <option
            value="ATAC-Seq"
          >
            ATAC-Seq
          </option>
          <option
            value="Untargeted RP"
          >
            Untargeted RP
          </option>
          <option
            value="Untargeted HILIC-positive"
          >
            Untargeted HILIC-positive
          </option>
          <option
            value="Untargeted HILIC -negative"
          >
            Untargeted HILIC -negative
          </option>
          <option
            value="Untargeted Lipidomics"
          >
            Untargeted Lipidomics
          </option>
          <option
            value="Targeted Acyl-CoA"
          >
            Targeted Acyl-CoA
          </option>
          <option
            value="Targeted Acylcarnitines"
          >
            Targeted Acylcarnitines
          </option>
          <option
            value="Targeted Ketoacids"
          >
            Targeted Ketoacids
          </option>
          <option
            value="Targeted Organic Acids"
          >
            Targeted Organic Acids
          </option>
          <option
            value="Targeted Eicosanoids"
          >
            Targeted Eicosanoids
          </option>
          <option
            value="Targeted Nucleotides"
          >
            Targeted Nucleotides
          </option>
          <option
            value="Targeted oxylipins"
          >
            Targeted oxylipins
          </option>
          <option
            value="Targeted Amines"
          >
            Targeted Amines
          </option>
          <option
            value="Targeted Steroids"
          >
            Targeted Steroids
          </option>
          <option
            value="TCA Cycle"
          >
            TCA Cycle
          </option>
          <option
            value="Targeted Ceramides"
          >
            Targeted Ceramides
          </option>
          <option
            value="Global Proteomics"
          >
            Global Proteomics
          </option>
          <option
            value="Global Phospho-proteomics"
          >
            Global Phospho-proteomics
          </option>
          <option
            value="Redox proteome"
          >
            Redox proteome
          </option>
          <option
            value="Acyl/Acetyl proteome"
          >
            Acyl/Acetyl proteome
          </option>
          <option
            value="SomaLogic"
          >
            SomaLogic
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="identifier"
      >
        Identifier(s) * – comma seperate if multiple
        <input
          className="form-control"
          disabled={false}
          id="identifier"
          placeholder="Ex: AS213141"
          required={true}
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <div
        className="invalid-feedback"
      >
        Field Required
      </div>
      <label
        htmlFor="collection-date"
      >
        Collection Date *
        <input
          className="form-control"
          disabled={false}
          id="collectionDate"
          placeholder="MM/DD/YYYY"
          required={true}
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="subject-type"
      >
        Subject Type *
        <select
          className="form-control"
          disabled={false}
          id="subjectType"
          value=""
        >
          <option
            value="Human"
          >
            Human
          </option>
          <option
            value="Animal"
          >
            Animal
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="study-phase"
      >
        Study Phase *
        <select
          className="form-control"
          disabled={false}
          id="studyPhase"
          value=""
        >
          <option
            value="Vanguard"
          >
            Vanguard
          </option>
          <option
            value="1"
          >
            1
          </option>
          <option
            value="1A"
          >
            1A
          </option>
          <option
            value="1B"
          >
            1B
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="N/A"
          >
            N/A
          </option>
          <option
            value="other"
          >
            Other
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={true}
        className="form-check-input"
        disabled={false}
        id="rawData"
        name="Raw"
        type="checkbox"
        value="Raw Data"
      />
      <label
        className="form-check-label"
        htmlFor="rawData"
      >
        Raw Data
      </label>
    </div>
    <div
      className="form-check form-check-inline"
    >
      <input
        checked={false}
        className="form-check-input"
        disabled={false}
        id="processedData"
        name="Pre-Processed"
        type="checkbox"
        value="Processed Data"
      />
      <label
        className="form-check-label"
        htmlFor="processedData"
      >
        Pre-Processed Data
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="description"
      >
        <br />
        Description
        <textarea
          className="form-control"
          disabled={false}
          id="description"
          placeholder="Description"
          type="textarea"
          value=""
        />
      </label>
    </div>
    <input
      id="submit-form"
      style={
        Object {
          "visibility": "hidden",
        }
      }
      type="submit"
    />
  </form>
</div>
`;

exports[`Storyshots Upload List Empty List 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="noListItems centered"
  >
    <br />
    <br />
    <br />
    <h2>
      Upload files and they will appear here!
    </h2>
  </div>
</div>
`;

exports[`Storyshots Upload List Filled Test List 1`] = `
<div
  className="upload-component"
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <table
    className="table table-hover uploadList"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          File Name
        </th>
        <th
          scope="col"
        >
          Status
        </th>
        <th
          className="centered"
          scope="col"
        >
          Upload Successful
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="uploadItem"
      >
        <td>
          test1.fa
        </td>
        <td>
          Uploading...
        </td>
        <td
          className="centered"
        >
          <span
            className="oi loadIndicator oi-loop-circular"
          />
        </td>
      </tr>
      <tr
        className="uploadItem"
      >
        <td>
          test2.fa
        </td>
        <td>
          <div>
            <button
              className="errorHovButton"
              type="button"
            >
              Error: 1234
            </button>
            <div
              className="errorHover"
            >
              <h5>
                Error 1234: Descriptive Title
              </h5>
              <p>
                This error occurs when… 
 Contact … with comments/questions.
              </p>
            </div>
          </div>
        </td>
        <td
          className="centered"
        >
          <span
            className="oi oi-warning"
          />
        </td>
      </tr>
      <tr
        className="uploadItem"
      >
        <td>
          test3.fa
        </td>
        <td>
          Upload Successful
        </td>
        <td
          className="centered"
        >
          <span
            className="oi oi-check"
          />
        </td>
      </tr>
      <tr
        className="uploadItem"
      >
        <td>
          test4.fa
        </td>
        <td>
          Status Undefined
        </td>
        <td
          className="centered"
        >
          <span
            className="oi oi-question-mark"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Upload List Items Failed 1`] = `
<table
  className="upload-component table table-hover uploadList"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        File Name
      </th>
      <th
        scope="col"
      >
        Status
      </th>
      <th
        className="centered"
        scope="col"
      >
        Upload Successful
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="uploadItem"
    >
      <td>
        test2.fa
      </td>
      <td>
        <div>
          <button
            className="errorHovButton"
            type="button"
          >
            Error: 1234
          </button>
          <div
            className="errorHover"
          >
            <h5>
              Error 1234: Descriptive Title
            </h5>
            <p>
              This error occurs when… 
 Contact … with comments/questions.
            </p>
          </div>
        </div>
      </td>
      <td
        className="centered"
      >
        <span
          className="oi oi-warning"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Upload List Items Successful Upload 1`] = `
<table
  className="upload-component table table-hover uploadList"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        File Name
      </th>
      <th
        scope="col"
      >
        Status
      </th>
      <th
        className="centered"
        scope="col"
      >
        Upload Successful
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="uploadItem"
    >
      <td>
        test3.fa
      </td>
      <td>
        Upload Successful
      </td>
      <td
        className="centered"
      >
        <span
          className="oi oi-check"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Upload List Items Unknown Status 1`] = `
<table
  className="upload-component table table-hover uploadList"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        File Name
      </th>
      <th
        scope="col"
      >
        Status
      </th>
      <th
        className="centered"
        scope="col"
      >
        Upload Successful
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="uploadItem"
    >
      <td>
        test4.fa
      </td>
      <td>
        Status Undefined
      </td>
      <td
        className="centered"
      >
        <span
          className="oi oi-question-mark"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Upload List Items Uploading 1`] = `
<table
  className="upload-component table table-hover uploadList"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        File Name
      </th>
      <th
        scope="col"
      >
        Status
      </th>
      <th
        className="centered"
        scope="col"
      >
        Upload Successful
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="uploadItem"
    >
      <td>
        test1.fa
      </td>
      <td>
        Uploading...
      </td>
      <td
        className="centered"
      >
        <span
          className="oi loadIndicator oi-loop-circular"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Upload Screen Default 1`] = `
<div
  className="upload-component container"
  style={
    Object {
      "padding": "1em",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <form
        className="needs-validation"
        disabled={false}
        id="uploadForm"
        name="uploadForm"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="data-type"
          >
            Data Type *
            <select
              className="form-control"
              disabled={false}
              id="dataType"
              required={true}
              type="text"
            >
              <option
                value="WGS"
              >
                WGS
              </option>
              <option
                value="RNA-seq"
              >
                RNA-seq
              </option>
              <option
                value="Methylome (Gastroc, White Fat, Liver, Heart)"
              >
                Methylome (Gastroc, White Fat, Liver, Heart)
              </option>
              <option
                value="ATAC-Seq"
              >
                ATAC-Seq
              </option>
              <option
                value="Untargeted RP"
              >
                Untargeted RP
              </option>
              <option
                value="Untargeted HILIC-positive"
              >
                Untargeted HILIC-positive
              </option>
              <option
                value="Untargeted HILIC -negative"
              >
                Untargeted HILIC -negative
              </option>
              <option
                value="Untargeted Lipidomics"
              >
                Untargeted Lipidomics
              </option>
              <option
                value="Targeted Acyl-CoA"
              >
                Targeted Acyl-CoA
              </option>
              <option
                value="Targeted Acylcarnitines"
              >
                Targeted Acylcarnitines
              </option>
              <option
                value="Targeted Ketoacids"
              >
                Targeted Ketoacids
              </option>
              <option
                value="Targeted Organic Acids"
              >
                Targeted Organic Acids
              </option>
              <option
                value="Targeted Eicosanoids"
              >
                Targeted Eicosanoids
              </option>
              <option
                value="Targeted Nucleotides"
              >
                Targeted Nucleotides
              </option>
              <option
                value="Targeted oxylipins"
              >
                Targeted oxylipins
              </option>
              <option
                value="Targeted Amines"
              >
                Targeted Amines
              </option>
              <option
                value="Targeted Steroids"
              >
                Targeted Steroids
              </option>
              <option
                value="TCA Cycle"
              >
                TCA Cycle
              </option>
              <option
                value="Targeted Ceramides"
              >
                Targeted Ceramides
              </option>
              <option
                value="Global Proteomics"
              >
                Global Proteomics
              </option>
              <option
                value="Global Phospho-proteomics"
              >
                Global Phospho-proteomics
              </option>
              <option
                value="Redox proteome"
              >
                Redox proteome
              </option>
              <option
                value="Acyl/Acetyl proteome"
              >
                Acyl/Acetyl proteome
              </option>
              <option
                value="SomaLogic"
              >
                SomaLogic
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="identifier"
          >
            Identifier(s) * – comma seperate if multiple
            <input
              className="form-control"
              disabled={false}
              id="identifier"
              placeholder="Ex: AS213141"
              required={true}
              type="text"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="collection-date"
          >
            Collection Date *
            <input
              className="form-control"
              disabled={false}
              id="collectionDate"
              placeholder="MM/DD/YYYY"
              required={true}
              type="text"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="subject-type"
          >
            Subject Type *
            <select
              className="form-control"
              disabled={false}
              id="subjectType"
            >
              <option
                value="Human"
              >
                Human
              </option>
              <option
                value="Animal"
              >
                Animal
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="study-phase"
          >
            Study Phase *
            <select
              className="form-control"
              disabled={false}
              id="studyPhase"
            >
              <option
                value="Vanguard"
              >
                Vanguard
              </option>
              <option
                value="1"
              >
                1
              </option>
              <option
                value="1A"
              >
                1A
              </option>
              <option
                value="1B"
              >
                1B
              </option>
              <option
                value="2"
              >
                2
              </option>
              <option
                value="N/A"
              >
                N/A
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-check form-check-inline"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="rawData"
            name="Raw"
            type="checkbox"
            value="Raw Data"
          />
          <label
            className="form-check-label"
            htmlFor="rawData"
          >
            Raw Data
          </label>
        </div>
        <div
          className="form-check form-check-inline"
        >
          <input
            className="form-check-input"
            disabled={false}
            id="processedData"
            name="Pre-Processed"
            type="checkbox"
            value="Processed Data"
          />
          <label
            className="form-check-label"
            htmlFor="processedData"
          >
            Pre-Processed Data
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="description"
          >
            <br />
            Description
            <textarea
              className="form-control"
              disabled={false}
              id="description"
              placeholder="Description"
              type="textarea"
            />
          </label>
        </div>
        <input
          id="submit-form"
          style={
            Object {
              "visibility": "hidden",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="col-8 centered"
    >
      <br />
      <div
        className="uploadAreaDnD "
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
      >
        <div
          className="row fileArea"
        >
          <div
            className="centered noFiles"
          >
            <br />
            <br />
            <br />
            <br />
            <span
              className="oi oi-cloud-upload"
            />
            <h3>
              Drag and drop files here
              <br />
              Or
            </h3>
          </div>
        </div>
        <div
          className="selectArea"
        >
          <label
            className="btn btn-primary"
            htmlFor="fileUpload"
            id="fileUploadLabel"
          >
            Select Files
            <input
              id="fileUpload"
              multiple={true}
              name="fileUpload"
              onChange={[Function]}
              type="file"
            />
          </label>
        </div>
      </div>
      <br />
      <br />
      <label
        className="btn btn-success"
        htmlFor="submit-form"
        tabIndex={0}
      >
        Upload
      </label>
    </div>
    <div
      className="col-12"
    >
      <h3 />
      <div
        className="noListItems centered"
      >
        <br />
        <br />
        <br />
        <h2>
          Upload files and they will appear here!
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Upload Screen Files Uploaded, form filled 1`] = `
<div
  className="upload-component container"
  style={
    Object {
      "padding": "1em",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <form
        className="needs-validation"
        disabled={true}
        id="uploadForm"
        name="uploadForm"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="data-type"
          >
            Data Type *
            <select
              className="form-control"
              disabled={true}
              id="dataType"
              required={true}
              type="text"
              value="ATAC-Seq"
            >
              <option
                value="WGS"
              >
                WGS
              </option>
              <option
                value="RNA-seq"
              >
                RNA-seq
              </option>
              <option
                value="Methylome (Gastroc, White Fat, Liver, Heart)"
              >
                Methylome (Gastroc, White Fat, Liver, Heart)
              </option>
              <option
                value="ATAC-Seq"
              >
                ATAC-Seq
              </option>
              <option
                value="Untargeted RP"
              >
                Untargeted RP
              </option>
              <option
                value="Untargeted HILIC-positive"
              >
                Untargeted HILIC-positive
              </option>
              <option
                value="Untargeted HILIC -negative"
              >
                Untargeted HILIC -negative
              </option>
              <option
                value="Untargeted Lipidomics"
              >
                Untargeted Lipidomics
              </option>
              <option
                value="Targeted Acyl-CoA"
              >
                Targeted Acyl-CoA
              </option>
              <option
                value="Targeted Acylcarnitines"
              >
                Targeted Acylcarnitines
              </option>
              <option
                value="Targeted Ketoacids"
              >
                Targeted Ketoacids
              </option>
              <option
                value="Targeted Organic Acids"
              >
                Targeted Organic Acids
              </option>
              <option
                value="Targeted Eicosanoids"
              >
                Targeted Eicosanoids
              </option>
              <option
                value="Targeted Nucleotides"
              >
                Targeted Nucleotides
              </option>
              <option
                value="Targeted oxylipins"
              >
                Targeted oxylipins
              </option>
              <option
                value="Targeted Amines"
              >
                Targeted Amines
              </option>
              <option
                value="Targeted Steroids"
              >
                Targeted Steroids
              </option>
              <option
                value="TCA Cycle"
              >
                TCA Cycle
              </option>
              <option
                value="Targeted Ceramides"
              >
                Targeted Ceramides
              </option>
              <option
                value="Global Proteomics"
              >
                Global Proteomics
              </option>
              <option
                value="Global Phospho-proteomics"
              >
                Global Phospho-proteomics
              </option>
              <option
                value="Redox proteome"
              >
                Redox proteome
              </option>
              <option
                value="Acyl/Acetyl proteome"
              >
                Acyl/Acetyl proteome
              </option>
              <option
                value="SomaLogic"
              >
                SomaLogic
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="identifier"
          >
            Identifier(s) * – comma seperate if multiple
            <input
              className="form-control"
              disabled={true}
              id="identifier"
              placeholder="Ex: AS213141"
              required={true}
              type="text"
              value="AS12313"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <div
            className="invalid-feedback"
          >
            Field Required
          </div>
          <label
            htmlFor="collection-date"
          >
            Collection Date *
            <input
              className="form-control"
              disabled={true}
              id="collectionDate"
              placeholder="MM/DD/YYYY"
              required={true}
              type="text"
              value="10/23/18"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="subject-type"
          >
            Subject Type *
            <select
              className="form-control"
              disabled={true}
              id="subjectType"
              value="Animal"
            >
              <option
                value="Human"
              >
                Human
              </option>
              <option
                value="Animal"
              >
                Animal
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="study-phase"
          >
            Study Phase *
            <select
              className="form-control"
              disabled={true}
              id="studyPhase"
              value="2"
            >
              <option
                value="Vanguard"
              >
                Vanguard
              </option>
              <option
                value="1"
              >
                1
              </option>
              <option
                value="1A"
              >
                1A
              </option>
              <option
                value="1B"
              >
                1B
              </option>
              <option
                value="2"
              >
                2
              </option>
              <option
                value="N/A"
              >
                N/A
              </option>
              <option
                value="other"
              >
                Other
              </option>
            </select>
          </label>
        </div>
        <div
          className="form-check form-check-inline"
        >
          <input
            checked={true}
            className="form-check-input"
            disabled={true}
            id="rawData"
            name="Raw"
            type="checkbox"
            value="Raw Data"
          />
          <label
            className="form-check-label"
            htmlFor="rawData"
          >
            Raw Data
          </label>
        </div>
        <div
          className="form-check form-check-inline"
        >
          <input
            className="form-check-input"
            disabled={true}
            id="processedData"
            name="Pre-Processed"
            type="checkbox"
            value="Processed Data"
          />
          <label
            className="form-check-label"
            htmlFor="processedData"
          >
            Pre-Processed Data
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="description"
          >
            <br />
            Description
            <textarea
              className="form-control"
              disabled={true}
              id="description"
              placeholder="Description"
              type="textarea"
            />
          </label>
        </div>
        <input
          id="submit-form"
          style={
            Object {
              "visibility": "hidden",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="col-8 centered"
    >
      <br />
      <div
        className="uploadAreaDnD "
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
      >
        <div
          className="row fileArea"
        >
          <div
            className="centered noFiles"
          >
            <br />
            <br />
            <br />
            <br />
            <span
              className="oi oi-cloud-upload"
            />
            <h3>
              Drag and drop files here
              <br />
              Or
            </h3>
          </div>
        </div>
        <div
          className="selectArea"
        >
          <label
            className="btn btn-primary"
            htmlFor="fileUpload"
            id="fileUploadLabel"
          >
            Select Files
            <input
              id="fileUpload"
              multiple={true}
              name="fileUpload"
              onChange={[Function]}
              type="file"
            />
          </label>
        </div>
      </div>
      <br />
      <br />
      <label
        className="btn btn-success"
        htmlFor="submit-form"
        tabIndex={0}
      >
        Upload
      </label>
    </div>
    <div
      className="col-12"
    >
      <h3>
        AS12313
      </h3>
      <table
        className="table table-hover uploadList"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              File Name
            </th>
            <th
              scope="col"
            >
              Status
            </th>
            <th
              className="centered"
              scope="col"
            >
              Upload Successful
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="uploadItem"
          >
            <td>
              test1.fa
            </td>
            <td>
              Uploading...
            </td>
            <td
              className="centered"
            >
              <span
                className="oi loadIndicator oi-loop-circular"
              />
            </td>
          </tr>
          <tr
            className="uploadItem"
          >
            <td>
              test2.fa
            </td>
            <td>
              <div>
                <button
                  className="errorHovButton"
                  type="button"
                >
                  Error: 1234
                </button>
                <div
                  className="errorHover"
                >
                  <h5>
                    Error 1234: Descriptive Title
                  </h5>
                  <p>
                    This error occurs when… 
 Contact … with comments/questions.
                  </p>
                </div>
              </div>
            </td>
            <td
              className="centered"
            >
              <span
                className="oi oi-warning"
              />
            </td>
          </tr>
          <tr
            className="uploadItem"
          >
            <td>
              test3.fa
            </td>
            <td>
              Upload Successful
            </td>
            <td
              className="centered"
            >
              <span
                className="oi oi-check"
              />
            </td>
          </tr>
          <tr
            className="uploadItem"
          >
            <td>
              test4.fa
            </td>
            <td>
              Status Undefined
            </td>
            <td
              className="centered"
            >
              <span
                className="oi oi-question-mark"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
